--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,9 @@
+2009-01-25
+Started on re-encoding script, currently named encode.php under plugins
+Updated EXT and Livegrid libraries successfully
+Column information displays safely by downloading column titles
+
+
 2009-01-05
 Lots of improvments made
 Finished Default template
