--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,5 +1,6 @@
 2009-02-11
 Fix bt.php and zip.php plugins, severly broken with new changes
+Make common only load fs_ or db_ modules depending on USE_DATABASE definition, also load fs_file for internal use only!
 
 2009-02-09
 Work getIDsFromRequest() into the modules only, and make the modules able to return items based on a list of IDs
