git-svn-id: svn://localhost/Media%20Server@62 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,10 @@
+2009-02-13
+Test zip stuff more, works fairly well
+Output contents of zip to other modules for images conversion
+Buffered gzinflate in archives modules
+Work on db_archive
+Fix adding a directory when archives don't store directories in the central directory, pick out all directories at right level?
+
 2009-02-11 (Full)
 Figure out how to download files out of a zip file
 FIX detail options in default template
