git-svn-id: svn://localhost/Media%20Server@63 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,5 +1,6 @@
 2009-02-13
-Test zip stuff more, works fairly well
+Implement %IF and %OF options for commands
+Test zip stuff more, works fairly well, make archive out forward to archive.php plugin
 Output contents of zip to other modules for images conversion
 Buffered gzinflate in archives modules
 Work on db_archive
