git-svn-id: svn://localhost/Media%20Server@66 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,7 @@
+2009-02-16
+Finish adding fs_ modules to db_modules, arists and albums should not be an fs_module, only db_
+Work on finishing EXT JS template, and add more templates from Ampache, Jinzora, and WinAmp Remote
+
 2009-02-13
 Implement %IF and %OF options for commands
 Test zip stuff more, works fairly well, make archive out forward to archive.php plugin
