--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,7 @@
+2009-02-16
+Worked on fs_imagedisk, outputting files works now
+Worked on some more organization
+
 2009-02-11
 Added fs_ modules for handling reading files off the filesystem, this should make the use of a database a lot more modular
 Fixed broken plugins from the fs_ modules change.
