--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -5,6 +5,8 @@ Archives not list out all directories properly even if the central directory doe
 Fixed db_archive module when adding zip files to database
 Adding a nice percent complete print out in db_files module
 Fixed cron.php plugin, it wasn't loading the state properly
+Fixed a lot of inconsistencies, now the $sql->get command only accepts an array of arguments
+Worked on db_albums module and made very little progress
 
 2009-02-16
 Worked on fs_imagedisk, outputting files works now
