Good build, just a few minor changes since the blog entry.
git-svn-id: svn://localhost/Media%20Server@84 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -5,6 +5,7 @@ Fixed counting in fs_archive and fs_diskimage, the matching and the !in_array wa
 Blogged about site
 Migrated to new repository
 Removed some unnessicary files from EXT JS template
+Removed excess .htaccess files from all the subdirectories and put it in a location match
 
 2009-02-17
 Finished adding db_diskimage, time for some curl! for downloading movie information
