git-svn-id: svn://localhost/Media%20Server@96 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,6 +1,7 @@
 2009-02-18
 Abstract db_archive module just like diskimage
 Add podcast list template
+Fix pretty dir paths to not be used when mod_rewrite is not used
 
 2009-02-17 (Full)
 Improve abstraction in the modules, so much repeated code!
