--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,8 @@
+2009-02-23
+Put validation in the SQL class
+Renamed all the $mysql variables to $database which is more appropriate
+Fixed a bug with the dir $request variable being used, added preg_quote to quote the special character in the query
+
 2009-02-20
 Fixed watch_list module ignored specific directories now, runs an extra query to compare current directory with all the paths in the watch list
 Started on new mobile template
@@ -5,7 +10,7 @@ Started on new mobile template
 2009-02-19
 Added a few more status features to the cron.php plugin
 Fixed state for cron.php script using globals in the db_watch_list module
-Changed the $mysql->get() and $mysql->set() functions to $mysql->query() and improved the API for accessing the database
+Changed the $database->get() and $database->set() functions to $database->query() and improved the API for accessing the database
 Changed the cron script to use db_watch and db_watch_list modules for checking changed on the filesystem and adding files to the database
 	This will potenially allow us to load any directory on the file while it is being browsed
 Made improvements on sql queries which should allow easier parsing for different database types in the future
