git-svn-id: svn://localhost/Media%20Server@109 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,4 +1,6 @@
 2009-02-24
+Implemented stream_select() in encode, this is the KEY! to making multiple streams work on a single threaded system
+Made a correction to db_artists that was causing the search to completely fail!
 Fixed some cleanup inefficiencies, now using NOT REGEXP in the expression
 Thought about what to do for the similar_text() problem with the db_album and db_artist modules
 Added Accept-Ranges handing to fs_file module, also abstracted some of the code just like db_file
