--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,5 +1,55 @@
+2009-02-26 (Full)
+------------- GENERAL TODO -------------
+Work on windows compatibility, streams are really working on windows, maybe the file solution will fix that
+Make backup ways of accessing files, store old IDs for removed files in a backup database
+	If a filename is supplied to the file.php plugin, do a search for that file if the ID doesn't exist
+Do memory checks and don't run cron if it's above a certain threshhold, maybe run some stuff with niceness
+Make sure the watched directory is mounted, if it is still in the database but doesn't exist on disk, prompt for input in the admin section and don't remove non existing files on cleanup
+Make a class for handling CSV as the database type, make sure all the queries can refer to the statement builder
+File uploading and personal folders
+	Limit access to watch and alias tables after implementing users and permissions
+Interface with mediatomb and support UPnP protocol
+------------- Plugin TODO -------------
+Get streams working in convert.php plugin and
+Set up conditions for when the streams are used based on if %OF and %IF are used in the command arguments
+Get ranges working in encode plugin
+	only allow the option if the argument can read from stdin and read the input from the module and write it to the input stream
+Figure out a way of doing this with files even if stdin is not being used in the command, if fopen is writing to a file, does it file feof when reading from the same file simulaneously?
+Figure out how to download files out of a zip file, maybe use an external program and set up archive.php plugin
+Add support for creating thumbnails in convert.php script
+FIX bt.php plugin to work with command line torrent seeder on windows
+Make convert.php plugin recognize video thumbnails and use vlc to extract them
+------------- Module TODO -------------
+Improve how the modules handle the headers, should the out() method only return the stream or should it change headers too?
+Make cleanup faster by having the other modules check if their paths are still in the files database instead?  it is still a lot of queries but would it be faster then checking the file system?
+	maybe instead of string compares, the IDs can be used, this would take some refactoring of each module
+Find a solution for adding files that are being browsed immediately, do a check in handles maybe for db_ modules that adds it to the database immediately if it is trying to be accessed?
+Find a way to pull out the common file path of all the artists and albums in the db_albums and db_artists module
+Work on db_movies, use cUrl to download movie information from imdb, use the volume decriptor for lookup, this shouldn't change even if they edited an image
+	Research the video_ts.ifo file, there must be a way of getting the full name from a DVD image, windows media center projects can do it, so can we
+------------- All Template TODO -------------
+Finish mobile template.
+FIX detail options in default template
+Add podcast list template
+Add Ampache XML API template
+Work on finishing EXT JS template, and add more templates from Ampache, Jinzora, and WinAmp Remote
+------------- EXT JS -------------
+Fix arrow-key movement in extjs template, in thumbnails view of the FolderView.js
+Add desktop.ini/folder.ini files and fix up thumbnails in FolderView.js
+Fix initial load time in FolderView.js
+Work on category view/show in groups in FolderView.js, add items that take up whole line and have headers
+Fix tooltip popup in FolderView.js, in wrong panel maybe?
+Press letter on the keyboard to go to that folder in FolderView.js and select.php
+Change desktop style to be buttons like folders in Desktop.js but render buttons to index.html
+Get settings dialog working and set up user accounts to control it
+Finished the player app that displays pictures
+Make players resize to Player window
+
 2009-02-26
 Get streams working in convert.php plugin and set up conditions for when the streams are used based on if %OF and %IF are used in the command arguments
+Make backup ways of accessing files, store old IDs for removed files in a backup database
+	If a filename is supplied to the file.php plugin, do a search for that file if the ID doesn't exist
+Improve how the modules handle the headers, should the out() method only return the stream or should it change headers too?
 
 2009-02-25
 Now that streams are working, create a system for using both the module->out() methods and an intermediate program
@@ -13,7 +63,7 @@ Get ranges working in encode plugin, then move the input to the appropriate modu
 	only allow the option if the argument can read from stdin and read the input from the module and write it to the input stream
 Figure out a way of doing this with files even if stdin is not being used in the command, if fopen is writing to a file, does it file feof when reading from the same file simulaneously?
 Finish db_video module, should be easy with all the abstraction
-Make convert module recognize video thumbnails and use vlc to extract them
+Make convert.php plugin recognize video thumbnails and use vlc to extract them
 
 2009-02-23
 Fix Accept-Ranges section in the db_file module out() method
