git-svn-id: svn://localhost/Media%20Server@120 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -2,6 +2,7 @@
 Made cleanup more efficient by creating a THREASHOLD constant for how many times the cron should run before cleaning up
 Also cleanup will fire when physical directories are changed and it is detected by the db_watch_list module, so they will no longer clean up when just adding new files to database
 Found that vlc has even more transcoding errors when the bitrate is being downscaled, this may screw up the client player responsiveness
+Fixed a problem with the db_watch_list module, if a directory in the db_watch list was searched but was never removed, it would recurse that directory infinitely
 
 2009-02-27
 db_artists module now shows albums from an artist also has $all$ option that shows all the songs by that artist
