--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,7 @@
+2009-03-03
+Make hard links and soft links, hard links are replaced when they are put in to the database, soft links are replaced when they are read from the database, this will allow us to do more network stuff
+Work on playlist module, use hard links to help find files
+
 2009-02-26
 Make the db_watch_list load when it is browsed to
 More compatibility testing with clients
