--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,7 +1,7 @@
 2009-03-03
-Files can now be added from across the network, using Hard aliases that replace remote file system paths with locally mounted paths
 Added db_alias module to handle the aliases, although it is semi-incomplete
 module::out() methods can only remove header declarations, they cannot set them, that is controlled by the plugin that calls it
+Cron now doesn't clean when a directory is unmounted or missing
 
 2009-03-02
 Made cleanup more efficient by creating a THREASHOLD constant for how many times the cron should run before cleaning up
