started the awesome db_playlist wrapper
git-svn-id: svn://localhost/Media%20Server@132 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,6 @@
+2009-03-04
+Fix zip.php and bt.php plugins, the changed with the Filepath always being aliased has borked them
+
 2009-03-03
 Update fs_diskimage and fs_archive to the new module::out() method standard
 Make all paths in database use same type of directory separator
