--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,7 @@
+2009-03-05
+Make a sync plugin in admin section for syncing between two databases and pulling out differences
+Make the audio module match amazon albums
+
 2009-03-04
 Fix zip.php and bt.php plugins, the changed with the Filepath always being aliased has borked them
 Make the searching functionality in db_playlist module more abstract and useful to other modules
